# ActuaryLab

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug.md  estudo.md  learning_journal.md  projeto.md  sprint.md
requirements/: base.txt  dev.txt  notebooks.txt  tests.txt
